--- a/flame/templates/manage.html
+++ b/flame/templates/manage.html
@@ -99,7 +99,7 @@
               <br>
               <label for="name">Model import</label>
               <input type="file" class="form-control" id="importLabel" name="importLabel" aria-describedby="importModel" placeholder="Upload file">
-              <button class="btn btn-outline-primary mt-2" id="import" type="submit" onclick="uploadFiles()">Import model</button>
+              <button class="btn btn-outline-primary mt-2" id="import"  onclick="importModel()">Import model</button>
             </div>
           </fieldset>
         </div>
