--- a/flame/templates/manage.html
+++ b/flame/templates/manage.html
@@ -32,7 +32,8 @@
 <body class="bg-light">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Flame manage interface</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText"
+      aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
@@ -46,7 +47,7 @@
   <div class="row">
     <div class="col-lg-3 col-md-12 bg-light" id="options">
       <p class="display-4 text-center">Models available</p>
-      
+
       <div id="tree" class="px-3"></div>
       <div class="float-left px-3">
         <i class="fas fa-plus" onclick="expandTree()" data-toggle="tooltip" data-placement="top" title="Expand all nodes"></i>
@@ -98,8 +99,10 @@
             <div class="form-group" id="importForm">
               <br>
               <label for="name">Model import</label>
-              <input type="file" class="form-control" id="importLabel" name="importLabel" aria-describedby="importModel" placeholder="Upload file">
-              <button class="btn btn-outline-primary mt-2" id="import"  onclick="importModel()">Import model</button>
+              <form id="uploadForm" method="POST" enctype=multipart/form-data>
+                <input type="file" class="form-control" id="importLabel" name="importLabel" aria-describedby="importModel" placeholder="Upload file">
+                <button class="btn btn-outline-primary mt-2" id="import" onclick="importModel()">Import model</button>
+              </form>
             </div>
           </fieldset>
         </div>
