--- a/flame/templates/manage.html
+++ b/flame/templates/manage.html
@@ -77,7 +77,7 @@
           <fieldset class="form-group mt-3 ">
             <legend>Publish</legend>
             <button class="btn btn-outline-primary " onclick="cloneModel()">Clone</button>
-            <button class="btn btn-outline-primary ">Export</button>
+            <button class="btn btn-outline-primary " onclick="exportModel()">Export</button>
           </fieldset>
           <br>
           <fieldset class="form-group mt-3">
