The table now displays details

--- a/flame/templates/manage.html
+++ b/flame/templates/manage.html
@@ -60,7 +60,7 @@
         <table class="table table-striped table-bordered">
           <thead id="tHead" colspan="2">
             <tr>
-              <th id="details">Select a model</th>
+              <th id="details">Select a model version</th>
             </tr>
           </thead>
           <tbody id="tBody">
@@ -110,8 +110,8 @@
     </div>
   </div>
 
-  <input type="text" id="hiddenInput" disabled hidden>
-  <input type="text" id="hiddenInputChild" disabled hidden>
+  <input type="text" id="hiddenInput" disabled >
+  <input type="text" id="hiddenInputChild" disabled >
 </body>
 
 </html>
