--- a/flame/public/css/style2.css
+++ b/flame/public/css/style2.css
@@ -13,9 +13,19 @@ body{
     overflow: inherit;
 }
 #addForm, #importLabel{
-    width: 55%;
+    width: 60%;
 }
 table {
     position: relative;
-    bottom: -58px;
+    bottom: -22px;
+}
+.navbar-brand{
+    font-size: 2.5em;
+}
+.line{
+    width:60%;
+    margin-left: 0%;
+}
+#exportBTN{
+    color: #007bff
 }
