--- a/flame/templates/manage.html
+++ b/flame/templates/manage.html
@@ -55,6 +55,7 @@
         aria-selected="false">Predict</a>
     </div>
   </nav>
+  <noscript><p>Enable JavaSript or use a modern browser to use Flame Interface</p></noscript>
   <div class="tab-content pt-3" id="nav-tabContent">
     <div class="tab-pane fade show active" id="manageTab" role="tabpanel" aria-labelledby="nav-manage-tab">
       <div class="row">
