--- a/flame/templates/manage.html
+++ b/flame/templates/manage.html
@@ -115,22 +115,13 @@
                 </div>
                 <div class="form-group" id="importForm">
                   <br>
-                  <label for="name">Model import</label>
-                    
-                  
-                    <!-- <form id="uploadForm" enctype="multipart/form-data">
-                    <input type="file" class="form-control" id="importLabel" name="importLabel" aria-describedby="importModel" placeholder="Upload file">
-                    <button class="btn btn-outline-primary mt-2" id="import" onclick="uploadModel()">Import model</button>
-                    </form> -->
-
-                    <div id="uploadForm">
+                  <p>Import model</p>  
+                  <div class="custom-file" id="uploadForm">
                       <input type="file" class="custom-file-input" id="uploadfile">
-                      <label class="custom-file-label" for="uploadfile" id="ifile-label">Choose file</label>
+                      <label class="custom-file-label" for="customFile" id ="impLabel">Choose file</label>
+                      <br>
                       <button class="btn btn-outline-primary mt-2" id="import" onclick="uploadModel()">Import model</button>
                     </div>
-
-
-
                 </div>
               </fieldset>
             </div>
